[fix] データ前処理

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ torchvision = "*"
 jupyter = "*"
 matplotlib = "*"
 jupyter-contrib-nbextensions = "*"
+opencv-python = "*"
 
 [requires]
 python_version = "3.7"
